@@ -1,4 +1,5 @@
 2010-12-25 Thomas Ernst	<typo3@thernst.de>
+	* [Feature #11563] Allow some users to register other users as participants for events
 	* [Bug #11716] Wrong default fieldgroup used
 	* [Feature #11717] Add examples for modified cal templates
 	* Updated documentation
